--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-
-
-    <title>Ripple</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ripple - Transfer list generation for Echo Acoustic Dispensers</title>
+    <meta name="description"
+      content="Software for Echo acoustic dispensers. Calculate dose-response curves, plan transfers, design dilutions, and reformat plates." />
+    <meta name="keywords"
+      content="echo dispenser, laboratory automation, liquid handling, dose response, plate reformatting" />
+  
+    <meta property="og:title" content="Ripple - Echo acoustic dispenser software" />
+    <meta property="og:description" content="Transfer list generation for Echo acoustic dispensers" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://adalecki.github.io/ripple/" />
   </head>
-
+  
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    <noscript>Ripple requires JavaScript to run.</noscript>
     <div id="root"></div>
+    <div style="display: none;">
+      <h1>Ripple - Echo acoustic dispenser software</h1>
+      <p>Comprehensive software suite for Echo acoustic dispensers. Features include a calculator for generating dose
+        response plates, a plate mapper/raw data parser for analysis, a dilution designer for planning DRCs, and Plate
+        Reformat for bulk plate transfers.</p>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+
 </html>
